--- a/tutorial/mybib.bib
+++ b/tutorial/mybib.bib
@@ -1,3 +1,17 @@
+@InProceedings{PikeGoodloe2011,
+  title = {Runtime Verification for Ultra-Reliable Systems},
+  author = {Pike, Lee and Niller, Sebastian and Goodloe, Alwyn and Wegmann, Nis},
+  publisher = {To appear at the 2nd International Conference on Runtime Verification},
+  year = {2011}
+}
+
+@InProceedings{PikeGoodloe2010,
+  title = {Copilot: A Hard Real-Time Runtime Monitor},
+  author = {Pike, Lee and Niller, Sebastian and Goodloe, Alwyn and Wegmann, Nis},
+  publisher = {To appear in the proceedings of the 1st Intl. Conference on Runtime Verification (RV’2010), 2010. Springer},
+  year = {2010}
+}
+
 @book{PeytonJones02,
   editor = {Simon Peyton Jones},
   howpublished = {PDF},
@@ -5,7 +19,7 @@
   publisher = {http://haskell.org/},
   title = {{H}askell 98 Language and Libraries: The Revised Report},
   type = {Language Definition},
-  year = 2002
+  year = {2002}
 }
 
 @book{Farhat2004,
